--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="https://github.com/phamtung210/Bai-tap/blob/adf2586dff32e6935f221d5cf3247801939d543c/login%20form/style.css">
+    <link rel="stylesheet" href="https://github.com/phamtung210/Bai-tap/blob/main/login%20form/style.css"
 </head>
 <body>
     <section class="login">
